# Kalshi

./: .env.example  .gitignore  .gitleaks.toml  FIRST_STARTUP.txt  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: run_flash_crash.py
configs/: cities.example.yaml  cities.yaml  config.example.yaml  config.max_cycles_demo.aggressive.example.yaml
configs/profiles/: aggressive_expansion.yaml  max_turnover_compounding.yaml  (+1 more)
lib/: market_manager.py
src/: bot.py  client.py  config.py  tenacity.py  typer.py
strategies/: base.py  flash_crash.py
tests/: test_auth_signing.py  test_bootstrap_cities.py  test_bootstrap_cities_cli.py  test_bot.py  test_cli_hardening_helpers.py  test_config_precedence.py  test_contract_terms_parsing.py  test_dst_window.py  test_execution_confidence_gate.py  test_execution_fee_gating.py  test_exit_fee_aware.py  test_fee_model.py  test_idempotency.py  test_kalshi_client_account_limits.py  test_kalshi_client_list_series.py  test_kalshi_client_retry_policy.py  test_kalshi_client_settlements.py  test_kalshi_integration.py  test_lock_logic.py  test_maker_entry.py  test_metar_client.py  test_metar_fallbacks.py  test_order_maintenance.py  test_order_payload_price_fields.py  test_orderbook_fp.py  test_post_only_cross_fallback.py  test_price_quantization.py  test_risk_entry_limits.py  test_risk_manager.py  test_risk_open_orders_exposure.py  test_scan_city_routing.py  test_settlement_ingest_and_calibration.py  test_sizing_fractional_kelly.py
venues/: __init__.py  base.py  polymarket_clob.py
(+35 files in other folders)
